# nozzle-viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: design.md
scripts/: write-release-manifest.py
src/: main.cpp
src/app/: smoke_oracle.cpp  smoke_oracle.hpp  source_registry.cpp  source_registry.hpp  viewer_state.cpp  viewer_state.hpp
src/gui/: gui.cpp  gui.hpp  preview_conversion.cpp  preview_conversion.hpp  render_backend.hpp
src/gui/platform/linux/: render_backend_opengl.cpp
src/gui/platform/macos/: render_backend_metal.mm
src/gui/platform/windows/: render_backend_d3d11.cpp
tests/: test_main.cpp
tests/cmake/: check_smoke_receiver_fail_evidence.cmake
